search bar color fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,9 +1,9 @@
-@import "tailwindcss";
-@import "./fonts.css";
+@import 'tailwindcss';
+@import './fonts.css';
 
 @theme {
   --color-primary: #0f0f0f;
-  --color-secondary: #7b92c2;
-  --shadow-custom: 0 0 15px rgb(123 146 194 / 0.5);
-  --font-display: "Montserrat", "sans-serif";
+  --color-secondary: #786c9f;
+  --shadow-custom: 0 0 15px rgb( 120, 108, 159/ 0.5);
+  --font-display: 'Montserrat', 'sans-serif';
 }
